Contrast Fix

--- a/css/hero.module.css
+++ b/css/hero.module.css
@@ -25,7 +25,7 @@
 }
 
 .log {
-    color: rgb(0, 166, 255);
+    color: rgb(2, 126, 192);
 }
 
 .bracket {
@@ -33,7 +33,7 @@
 }
 
 .content {
-    color: rgb(81, 171, 81);
+    color: rgb(67, 167, 67);
 }
 
 .heroContent img {
